services/api-core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-core
  labels:
    app: api-core
spec:
  type: ClusterIP
  selector:
    app: api-core
  ports:
    - port: 8080
      targetPort: 8080
