services/api-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-core
spec:
  ingressClassName: kong
  rules:
    - host: api-core.solarianetwork.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-core
                port:
                  number: 8080
